force-app/main/default/objects/User_Story__c/fields/Dev_Owner__c.field-meta.xml
<CustomField>
    <fullName>Dev_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Dev User Stories</relationshipLabel>
    <relationshipName>Dev_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>