force-app/main/default/objects/User_Story__c/fields/Lead_Review__c.field-meta.xml
<CustomField>
    <fullName>Lead_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Review</label>
    <type>Checkbox</type>
</CustomField>