force-app/main/default/objects/User_Story__c/fields/Lead_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Stories (Lead Reviewer)</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>