force-app/main/default/objects/User_Story__c/fields/Number_Of_Components__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Components__c</fullName>
    <label>Number Of Components</label>
    <summaryForeignKey>User_Story_Component__c.User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>