force-app/main/default/objects/User_Story__c/fields/Patch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Patch_Notes__c</fullName>
    <label>Patch Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>