force-app/main/default/objects/User_Story__c/fields/Peer_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Peer_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Stories (Peer Reviewer)</relationshipLabel>
    <relationshipName>Peer_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>