force-app/main/default/objects/User_Story__c/fields/Product_Tag__c.field-meta.xml
<CustomField>
    <fullName>Product_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Tag</label>
    <referenceTo>Product_Tag__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>