force-app/main/default/objects/User_Story__c/fields/QA_Effort_Hrs__c.field-meta.xml
<CustomField>
    <fullName>QA_Effort_Hrs__c</fullName>
    <label>QA Effort (Hrs)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>