force-app/main/default/objects/User_Story__c/fields/SIT_Owner__c.field-meta.xml
<CustomField>
    <fullName>SIT_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIT Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>SIT User Stories</relationshipLabel>
    <relationshipName>Sit_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>