force-app/main/default/objects/User_Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Dev Started</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Packaging Org</fullName>
            </value>
            <value>
                <fullName>QA Started</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>UAT Started</fullName>
            </value>
            <value>
                <fullName>Not Released</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>