force-app/main/default/objects/User_Story__c/fields/UAT_Owner__c.field-meta.xml
<CustomField>
    <fullName>UAT_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UAT Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>UAT User Stories</relationshipLabel>
    <relationshipName>Uat_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>