force-app/main/default/objects/User_Story__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dev_Owner__c</columns>
    <columns>Type__c</columns>
    <columns>Sprint__c</columns>
    <columns>Product_Tag__c</columns>
    <columns>Peer_Review__c</columns>
    <columns>Lead_Review__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>